Slight chrome friendly adjustment. Need to fix for phones - On chrome, things at the bottom are cut off by the footer. On Safari, things at the top cut off by address bar

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -9,12 +9,14 @@
 }
 
 html, body {
-    height: 100%;
     width: 100%;
     font-family: 'Saira Extra Condensed', sans-serif;
 }
 
 body {
+    height: 100%;
+
+
     background: #1e1e1e fixed url('../images/ben.jpg')  no-repeat center ;
     background-size: cover;
 
@@ -113,6 +115,7 @@ article {
     background-color: rgba(0, 0, 0, 0.4);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
     padding: 15px;
+    height: auto;
 }
 
 article p {
